[gd_scene load_steps=10 format=3 uid="uid://deog0mqhhm8wu"]

[ext_resource type="Script" path="res://demo/scenarios/bob-omb_battlefield.gd" id="1_umeah"]
[ext_resource type="PackedScene" uid="uid://c258bmvj8f4fi" path="res://demo/levels/bob-omb_battlefield/super_mario_64_bob-omb_battlefield.glb" id="2_jwx5m"]
[ext_resource type="Script" path="res://addons/libsm64-godot/mario/sm64_mario.gd" id="3_4reps"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_static_surfaces_handler.gd" id="4_pqe1r"]
[ext_resource type="PackedScene" uid="uid://yt8kbrfd41gi" path="res://demo/shared/camera_rig.tscn" id="4_vvb4d"]
[ext_resource type="PackedScene" uid="uid://dprpekyttg0g6" path="res://demo/shared/hud.tscn" id="5_vchjc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j31yq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2x4qp"]
sky_material = SubResource("ProceduralSkyMaterial_j31yq")

[sub_resource type="Environment" id="Environment_8wd6k"]
background_mode = 2
sky = SubResource("Sky_2x4qp")
tonemap_mode = 2
glow_enabled = true

[node name="bob-omb_battlefield" type="Node3D"]
script = ExtResource("1_umeah")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8wd6k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="super_mario_64_bob-omb_battlefield" parent="." instance=ExtResource("2_jwx5m")]

[node name="Object_2" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="0" groups=["libsm64_static_surfaces"]]

[node name="Object_3" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="1" groups=["libsm64_static_surfaces"]]

[node name="Object_4" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="2" groups=["libsm64_static_surfaces"]]

[node name="Object_5" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="3" groups=["libsm64_static_surfaces"]]

[node name="Object_6" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="4" groups=["libsm64_static_surfaces"]]

[node name="Object_7" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="5" groups=["libsm64_static_surfaces"]]

[node name="Object_8" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="6" groups=["libsm64_static_surfaces"]]

[node name="Object_9" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="7" groups=["libsm64_static_surfaces"]]

[node name="Object_10" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="8" groups=["libsm64_static_surfaces"]]

[node name="Object_11" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="9" groups=["libsm64_static_surfaces"]]

[node name="Object_12" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="10" groups=["libsm64_static_surfaces"]]

[node name="Object_13" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="11" groups=["libsm64_static_surfaces"]]

[node name="Object_14" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="12" groups=["libsm64_static_surfaces"]]

[node name="Object_15" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="13" groups=["libsm64_static_surfaces"]]

[node name="Object_16" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="14" groups=["libsm64_static_surfaces"]]

[node name="Object_17" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="15" groups=["libsm64_static_surfaces"]]

[node name="Object_18" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="16" groups=["libsm64_static_surfaces"]]

[node name="Object_19" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="17" groups=["libsm64_static_surfaces"]]

[node name="Object_20" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="18" groups=["libsm64_static_surfaces"]]

[node name="Object_21" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="19" groups=["libsm64_static_surfaces"]]

[node name="Object_22" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="20" groups=["libsm64_static_surfaces"]]

[node name="Object_23" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="21" groups=["libsm64_static_surfaces"]]

[node name="Object_24" parent="super_mario_64_bob-omb_battlefield/Sketchfab_model/bobomb battlefeild_obj_cleaner_materialmerger_gles" index="22" groups=["libsm64_static_surfaces"]]

[node name="SM64Mario" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.3144, 11.8729, 28.79)
script = ExtResource("3_4reps")
camera = NodePath("CameraRig/Camera3D")

[node name="CameraRig" parent="SM64Mario" instance=ExtResource("4_vvb4d")]

[node name="SM64StaticSurfaceHandler" type="Node" parent="."]
script = ExtResource("4_pqe1r")

[node name="HUD" parent="." instance=ExtResource("5_vchjc")]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]

[editable path="super_mario_64_bob-omb_battlefield"]
[editable path="SM64Mario/CameraRig"]
